feat(WebSocket): extract WebSocket handling into a seperated proxy
* True JSON api for websocket usage (hidden in the proxy).
* Simple interface for events (preperations for #6)

Relates #6

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Jan Philipp <knallisworld@googlemail.com>",
   "license": "MIT",
   "dependencies": {
+    "eventemitter3": "^1.1.1",
     "websocket": "^1.0.22"
   },
   "devDependencies": {
